# teetimes

./: main.py  old_main.py  pyproject.toml  teetimes.db
src/: db.py
src/courses/: bally_haly.py  glendenning.py  pippy_park.py  wilds.py
src/models/: __init__.py  course.py  tee_time.py
src/routers/: __init__.py  tee_times_router.py
src/services/: __init__.py  scraping_service.py
tests/: conftest.py  test_db.py  test_services.py  test_tee_times.py
